# weavbot

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  jekyll-gh-pages.yml
docs/: Gemfile  _config.yml  index.md
docs/en/: auto-start.md  cli.md  configuration.md  features.md  index.md  install.md  quick-start.md
docs/zh/: auto-start.md  cli.md  configuration.md  features.md  index.md  install.md  quick-start.md
weavbot/: __init__.py  __main__.py
weavbot/agent/: __init__.py  compact.py  context.py  loop.py  memory.py  messages.py  skills.py  subagent.py  test_compact.py  test_messages.py
weavbot/agent/tools/: __init__.py  base.py  cron.py  edit_file.py  filesystem.py  glob_file.py  grep_file.py  list_dir.py  load_media.py  mcp.py  message.py  read_file.py  registry.py  shell.py  spawn.py  web.py  web_fetch.py  web_search.py  write_file.py
weavbot/bus/: __init__.py  events.py  queue.py
weavbot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  slack.py  telegram.py  test_wecom_channel.py  wecom.py  whatsapp.py
weavbot/cli/: __init__.py  commands.py  interactive_setup.py  test_heartbeat_output.py  test_interactive_setup.py
weavbot/config/: __init__.py  loader.py  schema.py
weavbot/cron/: __init__.py  service.py  types.py
weavbot/heartbeat/: __init__.py  service.py
weavbot/i18n/: __init__.py  catalog_cli.py  locale.py  translate.py
weavbot/providers/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  openai_provider.py  registry.py  test_anthropic_provider.py  test_base.py  test_openai_provider.py
weavbot/session/: __init__.py  manager.py
weavbot/skills/cron/: SKILL.md
weavbot/skills/memory/: SKILL.md
weavbot/templates/: AGENTS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  USER.md
weavbot/utils/: __init__.py  helpers.py
